--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Kirtan Patel - Data Analyst Portfolio" />
     <meta property="og:description" content="B.Tech CSE Student passionate about transforming raw data into valuable insights" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/kirtan-portfolio-main/public/k3.webp" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/kirtan-portfolio-main/public/k3.webp" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +28,7 @@
       gtag('js', new Date());
       gtag('config', 'G-0HKNX35VCG');
     </script>
+    <link rel="icon" type="image/x-icon" href="/favicon1.ico" />
   </head>
 
   <body>
